# cookiecutter-py-fastapi-db

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: python-package.yml  python-publish.yml
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/database/: alembic.ini  init_db.py  main.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/database/alembic/: env.py  script.py.mako
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/database/models/: api.py  base.py  mixins.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/schemas/: errors.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/server/: __init__.py  api.py  app.md  app.py  default-config.yaml  exceptions.py  main.py  settings.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/server/dependencies/: context.py
